--- a/frontend/socio-hub/package.json
+++ b/frontend/socio-hub/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.14",
     "@mui/lab": "^5.0.0-alpha.144",
     "@mui/material": "^5.14.5",
     "@react-oauth/google": "^0.11.1",
@@ -27,11 +28,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-crop": "^10.1.8",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.2",
+    "timeago.js": "^4.0.0-beta.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
